--- a/indexO2.html
+++ b/indexO2.html
@@ -11,6 +11,7 @@
     <select id="klasgroep"></select>
     <p>Kies een leerling:</p>
     <select id="leerlingen"></select>
+    <h2 id="selectedStudent"></h2>
 
     <script src="script.js"></script>
 </body>
